--- a/summary.html
+++ b/summary.html
@@ -79,7 +79,7 @@
           <ul class="breadcrumb">
         <li id="publishDate">Last Published: 2020-12-09<span class="divider">|</span>
 </li>
-          <li id="projectVersion">Version: 10.0.0-M10</li>
+          <li id="projectVersion">Version: 10.0.0</li>
           </ul>
         </div>
       </header>
@@ -157,7 +157,7 @@
 <td>tomcat10-slf4j-logback</td></tr>
 <tr class="b">
 <td>Version</td>
-<td>10.0.0-M10</td></tr>
+<td>10.0.0</td></tr>
 <tr class="a">
 <td>Type</td>
 <td>jar</td></tr>
