Site checkin for project tomcat10-slf4j-logback

--- a/property-updates-report.html
+++ b/property-updates-report.html
@@ -81,7 +81,7 @@
           <ul class="breadcrumb">
         <li id="publishDate">Last Published: 2023-06-24<span class="divider">|</span>
 </li>
-          <li id="projectVersion">Version: 10.1.8</li>
+          <li id="projectVersion">Version: 10.1.9</li>
           </ul>
         </div>
       </header>
@@ -180,7 +180,7 @@
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td>${tomcat.version}</td>
-<td>10.1.8</td>
+<td>10.1.9</td>
 <td></td>
 <td><b>10.1.10</b></td>
 <td></td>
@@ -333,13 +333,13 @@
 <td align="left">org.apache.tomcat:tomcat-juli</td></tr>
 <tr class="b">
 <th width="30%">Current Version</th>
-<td align="left">10.1.8</td></tr>
+<td align="left">10.1.9</td></tr>
 <tr class="a">
 <th width="30%">Newer versions</th>
-<td align="left">10.1.9<br /><b>10.1.10</b>&#160;<i>Latest Incremental</i><br />11.0.0-M1<br />11.0.0-M3<br />11.0.0-M4<br />11.0.0-M5<br />11.0.0-M6<br /><b>11.0.0-M7</b>&#160;<i>Latest Major</i></td></tr>
+<td align="left"><b>10.1.10</b>&#160;<i>Latest Incremental</i><br />11.0.0-M1<br />11.0.0-M3<br />11.0.0-M4<br />11.0.0-M5<br />11.0.0-M6<br /><b>11.0.0-M7</b>&#160;<i>Latest Major</i></td></tr>
 <tr class="b">
 <th width="30%">Allowed version range</th>
-<td align="left">10.1.8</td></tr>
+<td align="left">10.1.9</td></tr>
 <tr class="a">
 <th width="30%">Infer associations from project</th>
 <td align="left">Yes</td></tr>
