--- a/dependency-updates-report.html
+++ b/dependency-updates-report.html
@@ -81,7 +81,7 @@
           <ul class="breadcrumb">
         <li id="publishDate">Last Published: 2023-06-24<span class="divider">|</span>
 </li>
-          <li id="projectVersion">Version: 10.1.8</li>
+          <li id="projectVersion">Version: 10.1.9</li>
           </ul>
         </div>
       </header>
@@ -191,7 +191,7 @@
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td>org.apache.tomcat</td>
 <td>tomcat-juli</td>
-<td>10.1.8</td>
+<td>10.1.9</td>
 <td>compile</td>
 <td></td>
 <td>jar</td>
@@ -328,7 +328,7 @@
 <td align="left">tomcat-juli</td></tr>
 <tr class="b">
 <th width="30%">Current Version</th>
-<td align="left">10.1.8</td></tr>
+<td align="left">10.1.9</td></tr>
 <tr class="a">
 <th width="30%">Scope</th>
 <td align="left">compile</td></tr>
@@ -340,7 +340,7 @@
 <td align="left">jar</td></tr>
 <tr class="b">
 <th width="30%">Newer versions</th>
-<td align="left">10.1.9<br /><b>10.1.10</b>&#160;<i>Latest Incremental</i><br />11.0.0-M1<br />11.0.0-M3<br />11.0.0-M4<br />11.0.0-M5<br />11.0.0-M6<br /><b>11.0.0-M7</b>&#160;<i>Latest Major</i></td></tr></table></section><section>
+<td align="left"><b>10.1.10</b>&#160;<i>Latest Incremental</i><br />11.0.0-M1<br />11.0.0-M3<br />11.0.0-M4<br />11.0.0-M5<br />11.0.0-M6<br /><b>11.0.0-M7</b>&#160;<i>Latest Major</i></td></tr></table></section><section>
 <h3><a name="org.slf4j:jcl-over-slf4j"></a>org.slf4j:jcl-over-slf4j</h3>
 <table border="0" class="table table-striped">
 <tr class="a">
