--- a/dependency-updates-report.html
+++ b/dependency-updates-report.html
@@ -81,7 +81,7 @@
           <ul class="breadcrumb">
         <li id="publishDate">Last Published: 2023-06-24<span class="divider">|</span>
 </li>
-          <li id="projectVersion">Version: 10.1.9</li>
+          <li id="projectVersion">Version: 10.1.10</li>
           </ul>
         </div>
       </header>
@@ -126,15 +126,15 @@
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of dependencies where the next version available is an incremental version update</td>
-<td>6</td></tr>
+<td>5</td></tr>
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td># of dependencies where the next version available is a minor version update</td>
 <td>0</td></tr>
 <tr class="b">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of dependencies where the next version available is a major version update</td>
-<td>0</td></tr></tr></table><section>
+<td>1</td></tr></tr></table><section>
 <h3><a name="Dependency_Management"></a>Dependency Management</h3>
 <p>This project does not declare any dependencies in a dependencyManagement section.</p></section><section>
 <h3><a name="Dependencies"></a>Dependencies</h3>
@@ -191,12 +191,12 @@
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td>org.apache.tomcat</td>
 <td>tomcat-juli</td>
-<td>10.1.9</td>
+<td>10.1.10</td>
 <td>compile</td>
 <td></td>
 <td>jar</td>
 <td></td>
-<td><b>10.1.10</b></td>
+<td></td>
 <td></td>
 <td><b>11.0.0-M7</b></td></tr>
 <tr class="b">
@@ -319,7 +319,7 @@
 <table border="0" class="table table-striped">
 <tr class="a">
 <th width="30%">Status</th>
-<td align="left"><img src="images/icon_warning_sml.gif" alt="" />&#160;There is at least one newer incremental version available. Incremental updates are typically passive.</td></tr>
+<td align="left"><img src="images/icon_warning_sml.gif" alt="" />&#160;There is at least one newer major version available. Major updates are rarely passive.</td></tr>
 <tr class="b">
 <th width="30%">Group Id</th>
 <td align="left">org.apache.tomcat</td></tr>
@@ -328,7 +328,7 @@
 <td align="left">tomcat-juli</td></tr>
 <tr class="b">
 <th width="30%">Current Version</th>
-<td align="left">10.1.9</td></tr>
+<td align="left">10.1.10</td></tr>
 <tr class="a">
 <th width="30%">Scope</th>
 <td align="left">compile</td></tr>
@@ -340,7 +340,7 @@
 <td align="left">jar</td></tr>
 <tr class="b">
 <th width="30%">Newer versions</th>
-<td align="left"><b>10.1.10</b>&#160;<i>Latest Incremental</i><br />11.0.0-M1<br />11.0.0-M3<br />11.0.0-M4<br />11.0.0-M5<br />11.0.0-M6<br /><b>11.0.0-M7</b>&#160;<i>Latest Major</i></td></tr></table></section><section>
+<td align="left">11.0.0-M1<br />11.0.0-M3<br />11.0.0-M4<br />11.0.0-M5<br />11.0.0-M6<br /><b>11.0.0-M7</b>&#160;<i>Latest Major</i></td></tr></table></section><section>
 <h3><a name="org.slf4j:jcl-over-slf4j"></a>org.slf4j:jcl-over-slf4j</h3>
 <table border="0" class="table table-striped">
 <tr class="a">
