--- a/property-updates-report.html
+++ b/property-updates-report.html
@@ -81,7 +81,7 @@
           <ul class="breadcrumb">
         <li id="publishDate">Last Published: 2023-06-24<span class="divider">|</span>
 </li>
-          <li id="projectVersion">Version: 10.1.9</li>
+          <li id="projectVersion">Version: 10.1.10</li>
           </ul>
         </div>
       </header>
@@ -126,15 +126,15 @@
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of properties where the next version available is an incremental version update</td>
-<td>3</td></tr>
+<td>2</td></tr>
 <tr class="a">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of properties where the next version available is a minor version update</td>
 <td>1</td></tr>
 <tr class="b">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of properties where the next version available is a major version update</td>
-<td>0</td></tr></tr></table><section>
+<td>1</td></tr></tr></table><section>
 <h3><a name="Summary_of_properties_associated_with_artifact_versions"></a>Summary of properties associated with artifact versions</h3>
 <table border="0" class="table table-striped">
 <tr class="a">
@@ -180,9 +180,9 @@
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td>${tomcat.version}</td>
-<td>10.1.9</td>
+<td>10.1.10</td>
 <td></td>
-<td><b>10.1.10</b></td>
+<td></td>
 <td></td>
 <td><b>11.0.0-M7</b></td></tr>
 <tr class="a">
@@ -324,7 +324,7 @@
 <table border="0" class="table table-striped">
 <tr class="a">
 <th width="30%">Status</th>
-<td align="left"><img src="images/icon_warning_sml.gif" alt="" />&#160;There is at least one newer incremental version available. Incremental updates are typically passive.</td></tr>
+<td align="left"><img src="images/icon_warning_sml.gif" alt="" />&#160;There is at least one newer major version available. Major updates are rarely passive.</td></tr>
 <tr class="b">
 <th width="30%">Property</th>
 <td align="left">${tomcat.version}</td></tr>
@@ -333,13 +333,13 @@
 <td align="left">org.apache.tomcat:tomcat-juli</td></tr>
 <tr class="b">
 <th width="30%">Current Version</th>
-<td align="left">10.1.9</td></tr>
+<td align="left">10.1.10</td></tr>
 <tr class="a">
 <th width="30%">Newer versions</th>
-<td align="left"><b>10.1.10</b>&#160;<i>Latest Incremental</i><br />11.0.0-M1<br />11.0.0-M3<br />11.0.0-M4<br />11.0.0-M5<br />11.0.0-M6<br /><b>11.0.0-M7</b>&#160;<i>Latest Major</i></td></tr>
+<td align="left">11.0.0-M1<br />11.0.0-M3<br />11.0.0-M4<br />11.0.0-M5<br />11.0.0-M6<br /><b>11.0.0-M7</b>&#160;<i>Latest Major</i></td></tr>
 <tr class="b">
 <th width="30%">Allowed version range</th>
-<td align="left">10.1.9</td></tr>
+<td align="left">10.1.10</td></tr>
 <tr class="a">
 <th width="30%">Infer associations from project</th>
 <td align="left">Yes</td></tr>
